--- a/templates/Instruments/about.html
+++ b/templates/Instruments/about.html
@@ -37,12 +37,10 @@
                 <div class="col-md-6">
                     <div class="left-content">
                         <h4>Ո՞վ ենք մենք և ինչ ենք անում:</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed voluptate nihil eum consectetur
-                            similique? Consectetur, quod, incidunt, harum nisi dolores delectus reprehenderit voluptatem
-                            perferendis dicta dolorem non blanditiis ex fugiat. Lorem ipsum dolor sit amet, consectetur
-                            adipisicing elit.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et,
-                            consequuntur, modi mollitia corporis ipsa voluptate corrupti eum ratione ex ea praesentium
-                            quibusdam? Aut, in eum facere corrupti necessitatibus perspiciatis quis.</p>
+                        <p>Մենք ստեղծել ենք ուսուցողական հարթակ որի միջոցով բժշկության ոլորտի մասնագետները կկարողանան ավելի դյուրին
+                        մեթոդներով ուսումնասիրել բժշկական սարքավորումները և տիրապետել նրանց ճիշտ օգտագործմանը։ Քանի որ սխալ շահագործման
+                        դեպքում կարող են առաջանալ մի շարք անսարքություննր, որոնց պատճառով կարող են նույնիսկ վտանգ սպառնալ հիվանդի առողջությանը</p>
+
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
