--- a/templates/Instruments/home.html
+++ b/templates/Instruments/home.html
@@ -52,8 +52,8 @@
     <div class="row">
     <div class="col-md-12">
         <div class="section-heading">
-            <h2> Կատեգորիաներ </h2>
-            <a href="{% url 'products' %}">Դիտել բոլոր սարքավորումները<i class="fa fa-angle-right"></i></a>
+            <h2> Բաժիններ</h2>
+            <a href="{% url 'products' %}">Տեսնել բոլոր սարքավորումները<i class="fa fa-angle-right"></i></a>
         </div>
     </div>
     {% for i in categories %}
@@ -94,7 +94,6 @@
                         <ul class="featured-list">
                             <li><a href="#">Կապնվել մեզ հետ</a></li>
                             <li><a href="#">Առաջարկել Ձեր աջակցությունը կայքին</a></li>
-                            <li><a href="#">Ավելացնել Ձեր սարքավորումը մեր կայքում</a></li>
                         </ul>
                         <a href="{% url 'about' %}" class="filled-button">Իմանալ ավելին</a>
                     </div>
