--- a/templates/Instruments/home.html
+++ b/templates/Instruments/home.html
@@ -1,7 +1,7 @@
 {% extends 'Instruments/base.html' %}
 {% load static %}
 
-{% block title %} Բժշկական սարքավորումներ {% endblock %}
+{% block title %} Բժշկական սարքաավորումներ {% endblock %}
 
 
 {% block content %}
@@ -52,7 +52,7 @@
     <div class="row">
     <div class="col-md-12">
         <div class="section-heading">
-            <h2> Բաժիններ</h2>
+            <h2> Բաժիններ </h2>
             <a href="{% url 'products' %}">Տեսնել բոլոր սարքավորումները<i class="fa fa-angle-right"></i></a>
         </div>
     </div>
