--- a/templates/Instruments/home.html
+++ b/templates/Instruments/home.html
@@ -92,8 +92,9 @@
                         <p><em>Մեր կայքում</em> Դուք կգտնեք ժամանակակից բժշկական սարքավորումների մասին տեղեկություններ։
                             Ինչպես նաև․</p>
                         <ul class="featured-list">
-                            <li><a href="#">Կապնվել մեզ հետ</a></li>
-                            <li><a href="#">Առաջարկել Ձեր աջակցությունը կայքին</a></li>
+                            <li><a href="#">Տեղեկություն թե ինչպես օգտվել սարքավորումներից</a></li>
+                            <li><a href="#">Անսարքությունների և դրանց վերաբերյալ տեղեկություններ</a></li>
+                            <li><a href="#">Ճիշտ շահագործման մեթոդներ և այլն</a></li>
                         </ul>
                         <a href="{% url 'about' %}" class="filled-button">Իմանալ ավելին</a>
                     </div>
