--- a/templates/Instruments/base.html
+++ b/templates/Instruments/base.html
@@ -18,12 +18,12 @@
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" href="{% static 'assets/css/fontawesome.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/css/fontawesome2.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/templatemo-sixteen.css' %}">
     <link rel="stylesheet" href="{% static 'assets/css/owl.css' %}">
     <script src="https://kit.fontawesome.com/b8991598b2.js"></script>
     <link rel="stylesheet" href="{% static 'assets/css/logo.css' %}">
-
+    {% block add_links %} {% endblock %}
 </head>
 <body>
 
