--- a/templates/Instruments/InstrumentView.html
+++ b/templates/Instruments/InstrumentView.html
@@ -66,7 +66,7 @@
 
                     <div class="col-md-8">
                         <div class="left-text">
-                            <h4>Modern Web Design</h4>
+
                             <p> {{ instruments.full_description1 | safe }}</p>
 
                         </div>
@@ -84,13 +84,16 @@
 
                     <div class="col-md-4">
                         <div class="left-image">
+
                             <img src="{{ instruments.image3.url }}"/>
+
                         </div>
                     </div>
 
                     <div class="col-md-8">
                         <div class="right-text">
                           <h4>{{ instruments.header2 }}</h4>
+                                <div class="line-dec"></div>
                             <p>{{ instruments.full_description2 | safe }}</p>
 
                         </div>
@@ -99,6 +102,7 @@
             </div>
         </div>
     </section>
+
 
 
 
