--- a/templates/Instruments/about.html
+++ b/templates/Instruments/about.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="right-image">
-                        <img src="assets/images/feature-image.jpg" alt="">
+                        <img src="https://thumbs.dreamstime.com/b/smart-industrial-industry-revolution-medicine-vector-illustration-engineer-doctor-manage-plant-smartphone-flat-design-166469562.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-md-6">
@@ -39,7 +39,9 @@
                         <h4>Ո՞վ ենք մենք և ինչ ենք անում:</h4>
                         <p>Մենք ստեղծել ենք ուսուցողական հարթակ որի միջոցով բժշկության ոլորտի մասնագետները կկարողանան ավելի դյուրին
                         մեթոդներով ուսումնասիրել բժշկական սարքավորումները և տիրապետել նրանց ճիշտ օգտագործմանը։ Քանի որ սխալ շահագործման
-                        դեպքում կարող են առաջանալ մի շարք անսարքություննր, որոնց պատճառով կարող են նույնիսկ վտանգ սպառնալ հիվանդի առողջությանը</p>
+                        դեպքում կարող են առաջանալ մի շարք անսարքություննր, որոնց պատճառով կարող են նույնիսկ վտանգ սպառնալ հիվանդի առողջությանը:<br>
+                        Մեր կայքի   միջոցով կարող եք նաև կապ հաստատել մասնագտեների հետ և ստանալ Ձեր հարցերի պատասխանը։<br>
+                        Ստորև նշված են մեր հետ համագործակցող մասնագետները։<br> <br> <br> <br> <br> <br> <br> <br></p>
 
                         <ul class="social-icons">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -64,10 +66,9 @@
                             <i class="fa fa-gear"></i>
                         </div>
                         <div class="down-content">
-                            <h4>Product Management</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur an adipisicing elit. Itaque, corporis nulla at
-                                quia quaerat.</p>
-                            <a href="#" class="filled-button">Read More</a>
+                            <h4>Անուն Ազգանուն</h4>
+                            <p>Գլխավոր ինժեներ</p>
+                            <a href="#" class="filled-button">Կապնվել</a>
                         </div>
                     </div>
                 </div>
