--- a/templates/Instruments/home.html
+++ b/templates/Instruments/home.html
@@ -1,7 +1,7 @@
 {% extends 'Instruments/base.html' %}
 {% load static %}
 
-{% block title %} Բժշկական սարքաավորումներ {% endblock %}
+{% block title %} E-ME {% endblock %}
 
 
 {% block content %}
